Fixed citations and cross-references
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@100 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -580,3 +580,38 @@
   title = {{Monotop Effective Theory: MadGraph model}},
   howpublished = "\url{http://feynrules.irmp.ucl.ac.be/wiki/Monotops}",
 }
+
+@article{Cotta:2013jna,
+      author         = "Cotta, Randel C. and Rajaraman, Arvind and Tait, Tim M.
+                        P. and Wijangco, Alexander M.",
+      title          = "{Particle Physics Implications and Constraints on Dark
+                        Matter Interpretations of the CDMS Signal}",
+      journal        = "Phys.Rev.",
+      number         = "1",
+      volume         = "D90",
+      pages          = "013020",
+      doi            = "10.1103/PhysRevD.90.013020",
+      year           = "2014",
+      eprint         = "1305.6609",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "UCI-HEP-TR-2013-10",
+      SLACcitation   = "%%CITATION = ARXIV:1305.6609;%%",
+}
+
+@article{Abdullah:2014lla,
+      author         = "Abdullah, Mohammad and DiFranzo, Anthony and Rajaraman,
+                        Arvind and Tait, Tim M.P. and Tanedo, Philip and others",
+      title          = "{Hidden on-shell mediators for the Galactic Center
+                        $\gamma$-ray excess}",
+      journal        = "Phys.Rev.",
+      number         = "3",
+      volume         = "D90",
+      pages          = "035004",
+      doi            = "10.1103/PhysRevD.90.035004",
+      year           = "2014",
+      eprint         = "1404.6528",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1404.6528;%%",
+}
