--- a/doc/tex/TTBar.tex
+++ b/doc/tex/TTBar.tex
@@ -48,7 +48,7 @@ The first term in each width corresponds to the decay into SM fermions, and the 
 
 \subsection{Parameter scan}
 
-As discussed in Sec.~\ref{sec:scalar}, the MFV assumption for spin-$0$ mediators leads to quark mass dependent Yukawa couplings, and therefore dominant couplings to top quarks. This motivates dedicated DM+$t\bar{t}$ searches. 
+As discussed in Sec.~\ref{sec:monojet_scalar}, the MFV assumption for spin-$0$ mediators leads to quark mass dependent Yukawa couplings, and therefore dominant couplings to top quarks. This motivates dedicated DM+$t\bar{t}$ searches. 
 The benchmark chosen for these searches follows the assumptions mentioned in the previous Section: we consider 
 a Dirac fermion DM particle, universal couplings to quarks, and minimum mediator width. 
  
