Fixed citations and cross-references
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@101 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/TTBar.tex
+++ b/doc/tex/TTBar.tex
@@ -90,7 +90,7 @@ with sufficient granularity.
   \begin{center}
     \includegraphics[scale=0.45]{figures/ttbar/MEt_diagonal_scan.pdf}
     \vspace{2mm}
-    \caption{\label{fig:scanPhidiag} Example of the dependence of the kinematic for points of the grid proposed in Tab.~\ref{tab:ttdm_benchmarks} close to the $m_{\phi,a} \sim 2m_\chi$ limit.3
+    \caption{\label{fig:scanPhidiag} Example of the dependence of the kinematic for points of the grid proposed in Tab.~\ref{sec:monojet_scalar} close to the $m_{\phi,a} \sim 2m_\chi$ limit.3
     }
 \end{center}
 \end{figure}
