--- a/doc/tex/TTBar.tex
+++ b/doc/tex/TTBar.tex
@@ -56,7 +56,7 @@ The benchmark points scanning the model parameters have been selected to ensure 
 
 \subsection{Parameter scan}
 
-The kinematics is most dependent on the masses $m_{\chi}$ and $m_{\phi,a}$. Figure~\ref{fig:scanPhi} and~\ref{fig:scanPhiPseudo} show typical depenencies for for scalar and pseudoscalar couplings respectively.
+The kinematic distributions are most dependent on the masses $m_{\chi}$ and $m_{\phi,a}$. Figure~\ref{fig:scanPhi} and~\ref{fig:scanPhiPseudo} show typical dependencies for scalar and pseudoscalar couplings respectively.
 
 The two relevant thresholds that are observed for the variation in the kinematic spectra 
 are $m_{\phi,a} = 2m_{\chi}$ and $m_{\phi,a} = 2m_t$. When the mediator mass exceeds both 
@@ -106,7 +106,7 @@ Typically only weak dependencies on width or equivalently couplings are observed
 \end{center}
 \end{figure}
 
-Another case where the width can impact the kinematics is when $m_{\phi,a}$ is slightly larger than $2m_\chi$. Here, the width determines the relative contribution between on-shell and off-shell production. An example is given in Fig.~\ref{fig:widthlargescan}. In our recommendations we propose to use for semplicity the minimal width, as this is represents the most conservative choice to interpret the LHC results. \textbf{[TODO: mention larger widths too]}
+Another case where the width can impact the kinematics is when $m_{\phi,a}$ is slightly larger than $2m_\chi$. Here, the width determines the relative contribution between on-shell and off-shell production. An example is given in Fig.~\ref{fig:widthlargescan}. In our recommendations we propose to use for simplicity the minimal width, as this is represents the most conservative choice to interpret the LHC results. \textbf{[TODO: mention larger widths too]}
 
 \begin{figure}[!ht]
   \begin{center}
