--- a/summary/summary.bib
+++ b/summary/summary.bib
@@ -540,3 +540,67 @@
   year = {2015}, 
   note = "[Online; accessed 27-April-2015]"
 }
+
+@misc{ForumSVN_monoHEFTD5,
+  title = {{SVN repository for Madgraph inputs for mono-Higgs EFT models}},
+  howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/EW_Higgs_D4D5/}",
+  year = {2015}, 
+  note = "[Online; accessed 04-May-2015]"
+}
+
+%%%ATLAS-specific
+
+@misc{ATLAS_PilotMC15,
+  title = {{Twiki page for pilot MC15 request for Powheg DMV samples}},
+  howpublished = "\url{https://twiki.cern.ch/twiki/bin/view/AtlasProtected/DMProductionRun2#MC15_pilot_request}",
+  year = {2015}, 
+  note = "[Online; accessed 05-May-2015]"
+}
+
+@misc{ATLAS_PowhegMultipleScalePDF,
+  title = {{Twiki page with instructions on how to handle multiple PDF and weights for Powheg samples}},
+  howpublished = "\url{https://twiki.cern.ch/twiki/bin/viewauth/AtlasProtected/PowhegForATLAS#Running_with_multiple_scale_PDF}",
+  year = {2015}, 
+  note = "[Online; accessed 05-May-2015]"
+}
+
+@misc{ATLAS_DMHF_DC14,
+  title = {{Twiki page for DC14 request of DM+$t\bar{t}$ samples using OTF Madgraph}},
+  howpublished = "\url{https://twiki.cern.ch/twiki/bin/view/AtlasProtected/HeavyQuarkDMRun2#EFT_Signal_Models_in_DC14}",
+  year = {2015}, 
+  note = "[Online; accessed 05-May-2015]"
+}
+
+@misc{ATLAS_DMSingleTop_DC14,
+  title = {{Twiki page with MC12-based DC14 jobOptions for DM+single top samples using Madgraph}},
+  howpublished = "\url{https://twiki.cern.ch/twiki/bin/viewauth/LHCDMF/MonoTop#ATLAS_Specific_info_JO}",
+  year = {2015}, 
+  note = "[Online; accessed 05-May-2015]"
+}
+
+
+@misc{ATLAS_MonoXSampleProductionTwiki,
+  title = {{Twiki page containing detailed instructions for private production of DM samples using OTF Madgraph}},
+  howpublished = "\url{https://twiki.cern.ch/twiki/bin/view/AtlasProtected/MonoXSampleProduction}",
+  year = {2015}, 
+  note = "[Online; accessed 05-May-2015]"
+}
+
+@misc{SysCalc,
+  title = {{The SysCalc Madgraph module}},
+  howpublished = "\url{https://cp3.irmp.ucl.ac.be/projects/madgraph/wiki/SysCalc}",
+  year = {2015}, 
+  note = "[Online; accessed 05-May-2015]"
+}
+
+
+@misc{ATLAS_MonoHiggs_DC14,
+  title = {{DC14 request for mono-Higgs EFT and simplified models}},
+  howpublished = "\url{https://its.cern.ch/jira/browse/ATLMCPROD-723}",
+  year = {2015}, 
+  note = "[Online; accessed 05-May-2015]"
+}
+
+
+
+
