--- a/doc/tex/MonojetLikeModels_Appendix.tex
+++ b/doc/tex/MonojetLikeModels_Appendix.tex
@@ -36,69 +36,70 @@ In this test we are generating the process with up to two parton emissions, so t
 \end{itemize}
 Two matching scales are tested at 30 and 80 GeV. The differential jet rates are shown in Fig. \ref{fig:CKKW_D5_30} for matching scale 30 GeV and Fig. \ref{fig:CKKW_D5_80} for 80 GeV. The 80 GeV matching scale gives smoother distribution, which is desired to avoid artifical effect due to parton matching. There will be a small tink around the matching scale for both cases.
 
-\begin{figure} [thbp]
-  \center
-  \begin{subfigure}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{figures/monojet_appendix/HistoJet1to2_30.pdf}
-    \caption{$1\rightarrow2$ parton process}
-  \end{subfigure}
-  \begin{subfigure}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{figures/monojet_appendix/HistoJet2to3_30.pdf}
-    \caption{$2\rightarrow3$ parton process}
-  \end{subfigure}
-  \begin{subfigure}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{figures/monojet_appendix/HistoJet3to4_30.pdf}
-    \caption{$3\rightarrow4$ parton process}
-  \end{subfigure}
-  \begin{subfigure}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{figures/monojet_appendix/HistoJet4to5_30.pdf}
-    \caption{$4\rightarrow5$ parton process}
-  \end{subfigure}
-  \caption{Jet differential rates distributions for EFT D5 sample with CKKW matching scale at 30 GeV. 0-, 1- and 2-parton emission cases are generated separatedly.}
-  \label{fig:CKKW_D5_30}
+\begin{figure}[h!]
+	\centering  
+	\subfloat[$1\rightarrow2$ parton process]{%
+		\includegraphics[width=0.48\linewidth]{figures/monojet_appendix/HistoJet1to2_80.pdf}
+	}
+	\hfill
+	\subfloat[$2\rightarrow3$ parton process]{%
+		\includegraphics[width=0.48\linewidth]{figures/monojet_appendix/HistoJet2to3_30.pdf}
+	}
+	\hfill
+	\subfloat[$3\rightarrow4$ parton process]{%
+		\includegraphics[width=0.48\linewidth]{figures/monojet_appendix/HistoJet3to4_30.pdf}
+	}
+	\hfill
+	\subfloat[$4\rightarrow5$ parton process]{%
+		\includegraphics[width=0.48\linewidth]{figures/monojet_appendix/HistoJet4to5_30.pdf}
+	}
+	\caption{Jet differential rates distributions for EFT D5 sample with CKKW matching scale at 30 GeV. 0-, 1- and 2-parton emission cases are generated separatedly.}
+	\label{fig:CKKW_D5_30}
 \end{figure}
 
-\begin{figure} [thbp]
-  \center
-  \begin{subfigure}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{figures/monojet_appendix/HistoJet1to2_80.pdf}
-    \caption{$1\rightarrow2$ parton process}
-  \end{subfigure}
-  \begin{subfigure}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{figures/monojet_appendix/HistoJet2to3_80.pdf}
-    \caption{$2\rightarrow3$ parton process}
-  \end{subfigure}
-  \begin{subfigure}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{figures/monojet_appendix/HistoJet3to4_80.pdf}
-    \caption{$3\rightarrow4$ parton process}
-  \end{subfigure}
-  \begin{subfigure}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{figures/monojet_appendix/HistoJet4to5_80.pdf}
-    \caption{$4\rightarrow5$ parton process}
-  \end{subfigure}
+
+\begin{figure}[h!]
+	\centering  
+	\subfloat[$1\rightarrow2$ parton process]{%
+		\includegraphics[width=0.48\linewidth]{figures/monojet_appendix/HistoJet1to2_80.pdf}
+	}
+	\hfill
+	\subfloat[$2\rightarrow3$ parton process]{%
+		\includegraphics[width=0.48\linewidth]{figures/monojet_appendix/HistoJet2to3_80.pdf}
+	}
+	\hfill
+	\subfloat[$3\rightarrow4$ parton process]{%
+    \includegraphics[width=0.48\linewidth]{figures/monojet_appendix/HistoJet3to4_80.pdf}
+	}
+	\hfill
+	\subfloat[$4\rightarrow5$ parton process]{%
+    \includegraphics[width=0.48\linewidth]{figures/monojet_appendix/HistoJet4to5_80.pdf}
+	}
   \caption{Jet differential rates distributions for EFT D5 sample with CKKW matching scale at 80 GeV. 0-, 1- and 2-parton emission cases are generated separatedly.}
   \label{fig:CKKW_D5_80}
 \end{figure}
 
+
+
 The MC distributions for the missing transverse energy and transverse momenta for the leading and subleading jets are plotted in Fig.. For the mono-jet analysis, usually a missing transverse energy cut larger than 300 GeV is applied for offline selection, which makes the contribution of the 0-parton emission case negligible in the mono-jet analysis.
 
-\begin{figure} [thbp]
-  \center
-  \begin{subfigure}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{figures/monojet_appendix/jet1pt_matching80.pdf}
-    \caption{Transverse momentum of leading jet}
-  \end{subfigure}
-  \begin{subfigure}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{figures/monojet_appendix/jet1pt_matching80.pdf}
-    \caption{Transverse momentum of subleading jet}
-  \end{subfigure}
-  \begin{subfigure}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{figures/monojet_appendix/MET_matching80.pdf}
-    \caption{Missing transverse energy}
-  \end{subfigure}
-  \caption{Kinematics distributions for EFT D5 sample with CKKW matching scale at 80 GeV. 0-, 1- and 2-parton emission cases are generated separatedly and added together by cross sections. The 0-parton emission case has very limited contribution for missing transverse energy larger than 300 GeV region.}
-  \label{fig:Kine_D5_80}
+\begin{figure}[h!]
+	\centering  
+	\subfloat[Missing transverse momentum]{%
+    \includegraphics[width=0.8\linewidth]{figures/monojet_appendix/MET_matching80.pdf}
+	}
+	\hfill
+	\subfloat[Transverse momentum of leading jet]{%
+    \includegraphics[width=0.48\linewidth]{figures/monojet_appendix/jet1pt_matching80.pdf}
+	}
+	\hfill
+	\subfloat[Transverse momentum of subleading jet]{%
+    \includegraphics[width=0.48\linewidth]{figures/monojet_appendix/MET_matching80.pdf}
+	}
+	\caption{Kinematics distributions for EFT D5 sample with CKKW matching scale at 80 GeV. 0-, 1- and 2-parton emission cases are generated separatedly and added together by cross sections. The 0-parton emission case has very limited contribution for missing transverse energy larger than 300 GeV region.}
+	\label{fig:Kine_D5_80}
 \end{figure}
+
 
 \section{Parton emission generation}
 \label{sec:monojet_parton_emission}
@@ -108,40 +109,41 @@ It is found that the 3- or more-parton emission cases are negligible in our inte
 
 Here the 0-, 1-, 2- and 3-parton emissions are generated separately and requested in matching step with \texttt{Merging:nJetMax=3} and scale at 80 GeV in Pythia8. The kinematic distributions for MET, leading and subleading jet transverse momenta are plotted in Fig, while the jet multiplicity at different leading jet transverse momentum cuts is shown in Fig.
 
-\begin{figure} [thbp]
-  \center
-  \begin{subfigure}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{figures/monojet_appendix/h_MET_MET250.pdf}
-    \caption{Transverse momentum of leading jet}
-  \end{subfigure}
-  \begin{subfigure}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{figures/monojet_appendix/h_pt1_MET250.pdf}
-    \caption{Transverse momentum of subleading jet}
-  \end{subfigure}
-  \begin{subfigure}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{figures/monojet_appendix/h_pt2_MET250.pdf}
-    \caption{Missing transverse energy}
-  \end{subfigure}
-  \caption{Kinematics distributions for EFT D5 sample with CKKW matching scale at 80 GeV. 0-, 1-, 2- and 3-parton emission cases are generated separatedly and added together by cross sections.}
-  \label{fig:RatioKine_D5}
+\begin{figure}[h!]
+	\centering  
+	\subfloat[Missing transverse momentum]{%
+		\includegraphics[width=0.48\linewidth]{figures/monojet_appendix/h_MET_MET250.pdf}
+	}
+	\hfill
+	\subfloat[Transverse momentum of leading jet]{%
+    \includegraphics[width=0.48\linewidth]{figures/monojet_appendix/h_pt1_MET250.pdf}
+	}
+	\hfill
+	\subfloat[Transverse momentum of subleading jet]{%
+		\includegraphics[width=0.48\linewidth]{figures/monojet_appendix/h_pt2_MET250.pdf}
+	}
+	\caption{Kinematics distributions for EFT D5 sample with CKKW matching scale at 80 GeV. 0-, 1-, 2- and 3-parton 
+		emission cases are generated separatedly and added together by cross sections.}
+	\label{fig:RatioKine_D5}
 \end{figure}
 
-\begin{figure} [thbp]
-  \center
-  \begin{subfigure}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{figures/monojet_appendix/h_njet30.pdf}
-    \caption{Jet multiplicity, leading jet $p_{T}>30$ GeV}
-  \end{subfigure}
-  \begin{subfigure}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{figures/monojet_appendix/h_njet80.pdf}
-    \caption{Jet multiplicity, leading jet $p_{T}>80$ GeV}
-  \end{subfigure}
-  \begin{subfigure}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{figures/monojet_appendix/h_njet250.pdf}
-    \caption{Jet multiplicity, leading jet $p_{T}>250$ GeV}
-  \end{subfigure}
-  \caption{Jet multiplicity distributions for EFT D5 sample with CKKW matching scale at 80 GeV. 0-, 1-, 2- and 3-parton emission cases are generated separatedly and added together by cross sections.}
-  \label{fig:RatioKine_D5}
+
+\begin{figure}[h!]
+	\centering  
+	\subfloat[Jet multiplicity, leading jet $p_{T}>30$ GeV]{%
+    \includegraphics[width=0.48\linewidth]{figures/monojet_appendix/h_njet30.pdf}
+	}
+	\hfill
+	\subfloat[Jet multiplicity, leading jet $p_{T}>80$ GeV]{%
+    \includegraphics[width=0.48\linewidth]{figures/monojet_appendix/h_njet80.pdf}
+	}
+	\hfill
+	\subfloat[Jet multiplicity, leading jet $p_{T}>250$ GeV]{%
+    \includegraphics[width=0.48\linewidth]{figures/monojet_appendix/h_njet250.pdf}
+	}
+	\caption{Jet multiplicity distributions for EFT D5 sample with CKKW matching scale at 80 GeV. 0-, 1-, 2- and 3-parton 
+		emission cases are generated separatedly and added together by cross sections.}
+	\label{fig:RatioKine_D5_2}
 \end{figure}
 
 With the ATLAS run-I baseline cut (MET and leading jet $p_{T}$ larger than 250 GeV, less than 4 jets), the 0+1 parton emission has 11.4\% yield less compared to 0+1+2+3 parton emission, while the 0+1+2 has only 0.4\% less. With MET$>$400 GeV, 0+1 parton emission has 16.8\% yield less and 0+1+2 parton emission has 0.8\% less compared to 0+1+2+3 parton emission. With MET$>$600 GeV, 0+1 parton emission has 22.1\% yield less and 0+1+2 parton emission has 1.6\% less compared to 0+1+2+3 parton emission.
